fix: NullInjectError ensure have provider for httpClient

--- a/angular.json
+++ b/angular.json
@@ -11,8 +11,8 @@
           "standalone": true
         }
       },
-      "root": "",
-      "sourceRoot": "src",
+      "root": "src",
+      "sourceRoot": "src/app",
       "prefix": "app",
       "architect": {
         "build": {
